tests/ui/eii/static/multiple_decls.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/multiple_decls.rs:5:1
   |
LL | const A: () = ();
   | ----------------- previous definition of the value `A` here
LL | #[eii(A)]
LL | static A: u64;
   | ^^^^^^^^^^^^^^ `A` redefined here
   |
   = note: `A` must be defined only once in the value namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.
